WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29379
broken build on Windows CE
https://bugs.webkit.org/show_bug.cgi?id=29379
Summary
broken build on Windows CE
Joerg Bornemann
Reported
2009-09-18 06:56:55 PDT
Created
attachment 39758
[details]
Windows CE compile fix There is no _aligned_alloc or _aligned_free on Windows CE. We just use the Windows code that was there before and use VirtualAlloc. But that also means that the BLOCK_SIZE must be 64K as this function allocates on 64K boundaries.
Attachments
Windows CE compile fix
(2.11 KB, patch)
2009-09-18 06:56 PDT
,
Joerg Bornemann
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2009-09-19 10:42:22 PDT
Landed in
r48558
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug