QtWebKit Windows CE compile fix

Patch by Joerg Bornemann <joerg.bornemann@nokia.com> on 2009-09-19
Reviewed by George Staikos.

https://bugs.webkit.org/show_bug.cgi?id=29379

There is no _aligned_alloc or _aligned_free on Windows CE.
We just use the Windows code that was there before and use VirtualAlloc.
But that also means that the BLOCK_SIZE must be 64K as this function
allocates on 64K boundaries.

* runtime/Collector.cpp:
(JSC::Heap::allocateBlock):
(JSC::Heap::freeBlock):
* runtime/Collector.h:

Canonical link: https://commits.webkit.org/40122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48558 268f45cc-cd09-0410-ab3c-d52691b4dbfc